[gd_scene load_steps=10 format=3 uid="uid://cuxeduuj7l52e"]

[ext_resource type="Script" path="res://Scripts/Box.gd" id="1_s6hj1"]
[ext_resource type="Texture2D" uid="uid://cibcntstf71xs" path="res://assets/sokoban_tilesheet.png" id="2_ov36b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fkneg"]
atlas = ExtResource("2_ov36b")
region = Rect2(448, 384, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_7arym"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkneg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5py5j"]
size = Vector2(71.1111, 71.1111)

[sub_resource type="Animation" id="Animation_twg6p"]
resource_name = "Blink"
length = 0.5
loop_mode = 2

[sub_resource type="Animation" id="Animation_iot4w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_38pie"]
resource_name = "pickup"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xss2o"]
_data = {
"Blink": SubResource("Animation_twg6p"),
"RESET": SubResource("Animation_iot4w"),
"pickup": SubResource("Animation_38pie")
}

[node name="Box" type="Area2D"]
position = Vector2(40, 24)
collision_layer = 4
collision_mask = 2
script = ExtResource("1_s6hj1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7arym")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.9, 0.9)
shape = SubResource("RectangleShape2D_5py5j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xss2o")
}

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(50, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-50, 0)

[node name="RayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -50)

[node name="RayCastDown" type="RayCast2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
